--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <title>Midway Learning - Web & Android Development Tutorials</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="/favicon.png">
+
+  <meta name="google-adsense-account" content="ca-pub-5073387599066525">
 </head>
 <body>
   <header>
