--- a/index.html
+++ b/index.html
@@ -84,5 +84,13 @@
     <p>© 2025 Midway Learning | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a></p>
 
   </footer>
+
+
+  <script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'olh7q0uwjw',
+    });
+</script>
+
 </body>
 </html>
